// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Categories object can get a details of category 1`] = `
Object {
  "__typename": "Category",
  "backgroundImage": Object {
    "__typename": "Image",
    "alt": "",
    "url": "http://localhost:8000/media/category-backgrounds/accessories_JIXY7af.jpg",
  },
  "description": "",
  "descriptionJson": "{\\"blocks\\": [{\\"key\\": \\"\\", \\"data\\": {}, \\"text\\": \\"\\", \\"type\\": \\"unstyled\\", \\"depth\\": 0, \\"entityRanges\\": [], \\"inlineStyleRanges\\": []}], \\"entityMap\\": {}}",
  "id": "Q2F0ZWdvcnk6Nw==",
  "name": "Accessories",
  "seoDescription": "",
  "seoTitle": "",
  "slug": "accessories",
}
`;

exports[`Categories object can get a list of ancestor categories 1`] = `
Array [
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6Nw==",
    "name": "Accessories",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "accessories",
  },
]
`;

exports[`Categories object can get a list of categories 1`] = `
Array [
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6Nw==",
    "name": "Accessories",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "accessories",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6OA==",
    "name": "Groceries",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "groceries",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6OQ==",
    "name": "Apparel",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "apparel",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTA=",
    "name": "T-shirts",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "t-shirts",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTE=",
    "name": "Polo Shirts",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "polo-shirts",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTI=",
    "name": "Hoodies",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "hoodies",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTM=",
    "name": "Footwear",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "footwear",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTQ=",
    "name": "Juices",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "juices",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MTU=",
    "name": "Alcohol",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "alcohol",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MjA=",
    "name": "Paints",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "paints",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MjI=",
    "name": "Homewares",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "homewares",
  },
]
`;

exports[`Categories object can get a list of subcategories 1`] = `
Array [
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MjA=",
    "name": "Paints",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "paints",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6MjI=",
    "name": "Homewares",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "homewares",
  },
]
`;

exports[`Categories object can get new page 1`] = `
Array [
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6Nw==",
    "name": "Accessories",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "accessories",
  },
]
`;

exports[`Categories object can get new page 2`] = `
Array [
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6Nw==",
    "name": "Accessories",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "accessories",
  },
  Object {
    "__typename": "Category",
    "id": "Q2F0ZWdvcnk6OA==",
    "name": "Groceries",
    "seoDescription": "",
    "seoTitle": "",
    "slug": "groceries",
  },
]
`;
